--- a/index.html
+++ b/index.html
@@ -1,78 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galeria</title>
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- font monserrat  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <!-- font monserrat  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Galería de Imágenes</h1>
     <span class="linea"></span>
     <section class="galeria">
-        <a href="#image1"><img src="Img/img1.jpg" alt=""></a>
-        <a href="#image2"><img src="Img/img2.jpg" alt=""></a>
-        <a href="#image3"><img src="Img/img3.jpg" alt=""></a>
-        <a href="#image4"><img src="Img/img4.jpg" alt=""></a>
-        <a href="#image5"><img src="Img/img5.jpg" alt=""></a>
-        <a href="#image6"><img src="Img/img6.jpg" alt=""></a>
+      <div class="contorno">
+        <a href="#image1"><img src="Img/img1.jpg" alt="" /></a>
+      </div>
+      <div class="contorno">
+        <a href="#image2"><img src="Img/img2.jpg" alt="" /></a>
+      </div>
+      <div class="contorno">
+        <a href="#image3"><img src="Img/img3.jpg" alt="" /></a>
+      </div>
+      <div class="contorno">
+        <a href="#image4"><img src="Img/img4.jpg" alt="" /></a>
+      </div>
+      <div class="contorno">
+        <a href="#image5"><img src="Img/img5.jpg" alt="" /></a>
+      </div>
+      <div class="contorno">
+        <a href="#image6"><img src="Img/img6.jpg" alt="" /></a>
+      </div>
     </section>
     <span class="linea"></span>
-    <br><br><br><br>
+    <br /><br /><br /><br />
 
     <article class="light-box" id="image1">
-        <a href="#image6" class="next left"><i class="fas fa-chevron-left"></i></a>
-        <img src="Img/img1.jpg" alt="">
-        <a href="#image2" class="next right"><i class="fas fa-chevron-right"></i></a>
-        <a href="#" class="close">X</a>
+      <a href="#image6" class="next left"
+        ><i class="fas fa-chevron-left"></i
+      ></a>
+      <img src="Img/img1.jpg" alt="" />
+      <a href="#image2" class="next right"
+        ><i class="fas fa-chevron-right"></i
+      ></a>
+      <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="image2">
-        <a href="#image1" class="next left"><i class="fas fa-chevron-left"></i></a>
-        <img src="Img/img2.jpg" alt="">
-        <a href="#image3" class="next right"><i class="fas fa-chevron-right"></i></a>
-        <a href="#" class="close">X</a>
+      <a href="#image1" class="next left"
+        ><i class="fas fa-chevron-left"></i
+      ></a>
+      <img src="Img/img2.jpg" alt="" />
+      <a href="#image3" class="next right"
+        ><i class="fas fa-chevron-right"></i
+      ></a>
+      <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="image3">
-        <a href="#image2" class="next"><i class="fas fa-chevron-left"></i></a>
-        <img src="Img/img3.jpg" alt="">
-        <a href="#image4" class="next"><i class="fas fa-chevron-right"></i></a>
-        <a href="#" class="close">X</a>
+      <a href="#image2" class="next"><i class="fas fa-chevron-left"></i></a>
+      <img src="Img/img3.jpg" alt="" />
+      <a href="#image4" class="next"><i class="fas fa-chevron-right"></i></a>
+      <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="image4">
-        <a href="#image3" class="next"><i class="fas fa-chevron-left"></i></a>
-        <img src="Img/img4.jpg" alt="">
-        <a href="#image5" class="next"><i class="fas fa-chevron-right"></i></a>
-        <a href="#" class="close">X</a>
+      <a href="#image3" class="next"><i class="fas fa-chevron-left"></i></a>
+      <img src="Img/img4.jpg" alt="" />
+      <a href="#image5" class="next"><i class="fas fa-chevron-right"></i></a>
+      <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="image5">
-        <a href="#image4" class="next"><i class="fas fa-chevron-left"></i></a>
-        <img src="Img/img5.jpg" alt="">
-        <a href="#image6" class="next"><i class="fas fa-chevron-right"></i></a>
-        <a href="#" class="close">X</a>
+      <a href="#image4" class="next"><i class="fas fa-chevron-left"></i></a>
+      <img src="Img/img5.jpg" alt="" />
+      <a href="#image6" class="next"><i class="fas fa-chevron-right"></i></a>
+      <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="image6">
-        <a href="#image5" class="next"><i class="fas fa-chevron-left"></i></a>
-        <img src="Img/img6.jpg" alt="">
-        <a href="#image1" class="next"><i class="fas fa-chevron-right"></i></a>
-        <a href="#" class="close">X</a>
+      <a href="#image5" class="next"><i class="fas fa-chevron-left"></i></a>
+      <img src="Img/img6.jpg" alt="" />
+      <a href="#image1" class="next"><i class="fas fa-chevron-right"></i></a>
+      <a href="#" class="close">X</a>
     </article>
-</body>
-
+  </body>
 </html>
